*SVN*

* Added Request#format to return the format used for the request as a mime type. If no format is specified, the first Request#accepts type is used. This means you can stop using respond_to for anything else than responses [DHH]. Examples:

    GET /posts/5.xml   | request.format => Mime::XML
    GET /posts/5.xhtml | request.format => Mime::HTML
    GET /posts/5       | request.format => request.accepts.first (usually Mime::HTML for browsers)

* Added the option for extension aliases to mime type registration [DHH]. Example (already in the default routes):

    Mime::Type.register "text/html", :html, %w( application/xhtml+xml ), %w( xhtml )
  
  ...will respond on both .html and .xhtml.

* @response.redirect_url works with 201 Created responses: just return headers['Location'] rather than checking the response status.  [Jeremy Kemper]

* Added CSV to Mime::SET so that respond_to csv will work [Cody Fauser]

* Fixed that HEAD should return the proper Content-Length header (that is, actually use @body.size, not just 0) [DHH]

* Added GET-masquarading for HEAD, so request.method will return :get even for HEADs. This will help anyone relying on case request.method to automatically work with HEAD and map.resources will also allow HEADs to all GET actions. Rails automatically throws away the response content in a reply to HEAD, so you don't even need to worry about that. If you, for whatever reason, still need to distinguish between GET and HEAD in some edge case, you can use Request#head? and even Request.headers["REQUEST_METHOD"] for get the "real" answer. Closes #6694 [DHH]

* Update Routing to complain when :controller is not specified by a route. Closes #6669. [Nicholas Seckar]

* Ensure render_to_string cleans up after itself when an exception is raised.  #6658 [rsanheim]

* Extract template_changed_since? from compile_template? so plugins may override its behavior for non-file-based templates.  #6651 [Jeff Barczewski]
