@@ -376,7 +376,7 @@ class LegacyRouteSetTests < Test::Unit::TestCase
 
   def test_named_url_with_no_action_specified
     rs.draw do |map|
-      map.root '', :controller => 'content'
+      map.home '', :controller => 'content'
       map.connect ':controller/:action/:id'
     end
     
@@ -384,14 +384,14 @@ class LegacyRouteSetTests < Test::Unit::TestCase
     assert_equal '/', rs.generate(:controller => 'content')
     
     x = setup_for_named_route.new
-    assert_equal({:controller => 'content', :action => 'index', :use_route => :root, :only_path => false},
-                 x.send(:root_url))
+    assert_equal({:controller => 'content', :action => 'index', :use_route => :home, :only_path => false},
+                 x.send(:home_url))
   end
   
   def test_url_generated_when_forgetting_action
     [{:controller => 'content', :action => 'index'}, {:controller => 'content'}].each do |hash| 
       rs.draw do |map|
-        map.root '', hash
+        map.home '', hash
         map.connect ':controller/:action/:id'
       end
       assert_equal '/', rs.generate({:action => nil}, {:controller => 'content', :action => 'hello'})
@@ -1590,6 +1590,20 @@ class RouteSetTest < Test::Unit::TestCase
 
     url = set.generate(:controller => "people", :action => "list")
     assert_equal "/people/list", url
+  end
+
+  def test_root_map
+    Object.const_set(:PeopleController, Class.new)
+
+    set.draw { |map| map.root :controller => "people" }
+
+    request.path = ""
+    request.method = :get
+    assert_nothing_raised { set.recognize(request) }
+    assert_equal("people", request.path_parameters[:controller])
+    assert_equal("index", request.path_parameters[:action])
+  ensure
+    Object.send(:remove_const, :PeopleController)
   end
 
   def test_generate_finds_best_fit
