@@ -8,16 +8,20 @@ ActionController::Routing::Routes.draw do |map|
   # Sample of named route:
   # map.purchase 'products/:id/purchase', :controller => 'catalog', :action => 'purchase'
   # This route can be invoked with purchase_url(:id => product.id)
+  
+  # Sample resource route (maps HTTP verbs to controller actions automatically):
+  # map.resources :products
 
-  # You can have the root of your site routed by hooking up '' 
+  # Sample resource route with options:
+  # map.resources :products, :member => { :short => :get, :toggle => :post }, :collection => { :sold => :get }
+
+  # You can have the root of your site routed with map.root
   # -- just remember to delete public/index.html.
-  # map.connect '', :controller => "welcome"
+  # map.root :controller => "welcome"
 
-  # Allow downloading Web Service WSDL as a file with an extension
-  # instead of a file named 'wsdl'
+  # Allow downloading Web Service WSDL as a file with an extension instead of a file named 'wsdl'
   map.connect ':controller/service.wsdl', :action => 'wsdl'
 
   # Install the default route as the lowest priority.
-  map.connect ':controller/:action/:id.:format'
   map.connect ':controller/:action/:id'
 end
